# kanban_food_stock

./: .gitignore  Cargo.toml  Trunk.toml  index.html  kanban_food_stock-2fa131478d9b3a66.js  kanban_food_stock-2fa131478d9b3a66_bg.wasm  kanban_food_stock-5fa15458249a72a5.js  kanban_food_stock-5fa15458249a72a5_bg.wasm  rustup_setup.sh  tailwind.config.js  tailwind.css
.github/workflows/: deploy.yml  static.yml
src/: CardKanban.rs  add_card_kanban_to_list_without_duplicate.rs  add_category.rs  add_name.rs  add_quantity_stock.rs  create_card_kanban.rs  create_card_kanban_with_all_field.rs  delete_card_kanban.rs  lib.rs  main.rs  main_backup.rs
src/components/: card.rs  cards.rs  item_modal.rs  item_name.rs  item_stock.rs  mod.rs  modal.rs  save_button.rs  save_button_local.rs
src/domain_core/: CardKanban.rs  add_card_kanban_to_list_without_duplicate.rs  add_category.rs  add_name.rs  add_quantity_stock.rs  card_kanban.rs  create_card_kanban.rs  create_card_kanban_item.rs  create_card_kanban_with_all_field.rs  delete_card_kanban.rs  list_kanban.rs  mod.rs
src/shell/: console.rs  mod.rs
src/shell/output/: console_output.rs  mod.rs
src/shell/storage/: memory_store.rs  mod.rs
