[package]
name = "kanban_food_stock"
version = "0.1.0"
edition = "2021"

[dependencies]
tailwind-css = "0.13.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
web-sys = "0.3.69"
log = "0.4.21"
wasm-bindgen = "0.2.92"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }


