[package]
name = "kanban_food_stock"
version = "0.1.0"
edition = "2021"

[dependencies]
tailwind-css = "0.13.0"
#yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew = { version = "0.21",features = ["csr"] }
web-sys = { version = "0.3.69" }
log = "0.4.21"
wasm-bindgen = "0.2.92"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
gloo-timers = "0.3.0"
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.12.5", features = ["json"] }
js-sys = "0.3.69"
console = "0.15.8"
percent-encoding = "2.3.1"
dotenvy = "0.15"